<resources>

    <string-array name="days">
        <item>Понедельник</item>
        <item>Вторник</item>
        <item>Среда</item>
        <item>Четверг</item>
        <item>Пятница</item>
        <item>Суббота</item>
    </string-array>

    <string-array name="weeks">
        <item>1 неделя</item>
        <item>2 неделя</item>
        <item>3 неделя</item>
        <item>4 неделя</item>
        <item>5 неделя</item>
        <item>6 неделя</item>
        <item>7 неделя</item>
        <item>8 неделя</item>
        <item>9 неделя</item>
        <item>10 неделя</item>
        <item>11 неделя</item>
        <item>12 неделя</item>
        <item>13 неделя</item>
        <item>14 неделя</item>
        <item>15 неделя</item>
        <item>16 неделя</item>
        <item>17 неделя</item>
    </string-array>

    <string name="app_name">Respect Schedule</string>
    <string name="data_start_semestr">Дата начала семестра</string>
    <string name="settings_change_theme">Сменить тему приложения</string>
    <string name="add">Добавить</string>
    <string name="close">Закрыть</string>
    <string name="educator">Преподаватель</string>
    <string name="subject">Предмет</string>
    <string name="audience">Аудитория</string>
    <string name="typelesson">Тип занятия</string>
    <string name="clear_subjects">Очистить предметы?</string>
    <string name="clear_audience">Очистить аудитории?</string>
    <string name="clear_educators">Очистить преподавателей?</string>
    <string name="clear_typelessons">Очистить типы занятий?</string>
    <string name="network_error">Ошибка подключения к сети</string>
    <string name="unknown_error">Произошла ошибка, попробуйте еще раз</string>
    <string name="error_api_unexpected">Неизвестная ошибка при ответе от удаленного сервера</string>
    <string name="retry">Повторить</string>
    <string name="developer">Разработчик</string>
    <string name="settings">Настройки</string>


    <string name="title_subject">Добавить предмет</string>
    <string name="title_audience">Добавить аудиторию</string>
    <string name="title_educator">Добавить преподавателя</string>
    <string name="title_typelesson">Добавить тип занятия</string>

    <string name="error_subject">Введите предмет</string>
    <string name="error_audience">Введите аудиторию</string>
    <string name="error_educator">Введите преподавателя</string>
    <string name="error_typelesson">Введите тип предмета</string>

    <string name="hint_subject">Предмет</string>
    <string name="hint_audience">Аудитория</string>
    <string name="hint_educator">Преподаватель</string>
    <string name="hint_typelesson">Тип занятия</string>

    <string name="delete_subject">Удалить предмет «%1$s»?</string>
    <string name="delete_audience">Удалить аудиторию «%1$s»?</string>
    <string name="delete_educator">Удалить преподавателя «%1$s»?</string>
    <string name="delete_typelesson">Удалить тип предмета «%1$s»?</string>

    <string name="clear_day">Очистить день</string>
    <string name="string_empty_lesson">Занятие отсутствует</string>
    <string name="string_time_one">13:10</string>
    <string name="string_time_two">14:00</string>

    <string name="button_share">Поделиться</string>
    <string name="button_load">Загрузить</string>
    <string name="button_save_file">Сохранить в файл</string>
    <string name="dialog_button_edit">Сохранить</string>

    <string name="title_transfer_data">Обменяться расписанием</string>
    <string name="title_share_data">Отправить расписание</string>

    <string name="success_save_file">Расписание успешно сохранено в файл</string>
    <string name="error_save_file">Ошибка при сохранении файла</string>
    <string name="success_share_schedule">Расписание успешно отправлено</string>
    <string name="error_load_schedule">Ошибка загрузки расписания</string>
    <string name="error_parse_share">Ошибка парсинга файла при отправке</string>
    <string name="success_load_schedule">Расписание обновлено</string>
    <string name="transfer_info_snackbar">Отправьте/загрузите файл с расписанием</string>

    <string name="feedback_developer">Обратная связь с разработчиком</string>
    <string name="string_email_developer">Электронная почта</string>
    <string name="string_tg_developer">Telegram</string>
    <string name="tg_developer">https://t.me/volkovmike</string>
    <string name="email_developer">mailto:mikhailvolkov2014–2014@ya.ru</string>

    <string name="title_edit_data">Редактор данных</string>
    <string name="title_calls">Расписание звонков</string>

    <string name="dialog_fragment_title_typelesson">Типы занятия</string>
    <string name="dialog_fragment_title_educator">Преподаватели</string>
    <string name="dialog_fragment_title_audience">Аудитории</string>
    <string name="dialog_fragment_title_subject">Предметы</string>

    <string name="title_edit_subject">Редактировать предмет</string>
    <string name="title_edit_audience">Редактировать аудиторию</string>
    <string name="title_edit_educator">Редактировать преподавателя</string>
    <string name="title_edit_typelesson">Редактировать тип предмета</string>
    <string name="string_empty_day">Занятия отсутствуют ;)</string>
    <string name="menu_item_copy_previous_lesson">Скопировать в предыдущее занятие</string>
    <string name="menu_item_copy_next_lesson">Скопировать в следующее занятие</string>
    <string name="clear_lesson">Очистить занятие</string>
    <string name="create_lesson">Добавить занятие</string>
    <string name="title_create_lesson">Данные занятия</string>
    <string name="title_dialog_licenses">Лицензии открытого ПО</string>
    <string name="copy_other_day">Скопировать в другой день</string>
    <string name="dialog_button_copy">Скопировать</string>
    <string name="title_dialog_rv_weeks">Учебные недели</string>
    <string name="select_all">Все</string>
    <string name="current_day">Текущая дата</string>
    <string name="selectively_week">Выборочно</string>
    <string name="error_load_database">Ошибка загрузки расписания</string>

    <string name="monday">Понедельник</string>
    <string name="tuesday">Вторник</string>
    <string name="wednesday">Среда</string>
    <string name="friday">Пятница</string>
    <string name="thuesday">Четверг</string>
    <string name="saturday">Суббота</string>

    <string name="title_dialog_rv_lessons">Выбор занятия</string>
    <string name="select_unevens">Нечетные</string>
    <string name="select_evens">Четные</string>

    <string name="timelesson">%1$s - %2$s</string>

    <string name="dialog_select_all">Отметить/очистить все</string>
    <string name="title_copy_lesson">Скопировать занятие</string>
    <string name="empty_list_selected_day">Добавьте занятие (день недели и время)</string>
    <string name="dialog_clear_day">Вы уверены что хотите очистить день?</string>
    <string name="title_select_theme">Выберите тему</string>
    <string name="dialog_button_delete">Удалить</string>
    <string name="next">Далее</string>
    <string name="delete_week">Удалить выбранные недели?</string>
    <string name="selected_weeks">Выбранные недели:</string>
    <string name="error_selected_week">Выберите минимум одну неделю</string>
    <string name="already_selected_lesson">Данное занятие уже выбрано</string>
    <string name="copy_week">Скопировать текущую в выбранные недели?</string>
    <string name="calls_info_snack">Нажмите на время, чтобы изменить</string>
</resources>
