<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/shareTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/spacing_medium"
        android:drawablePadding="@dimen/spacing_medium"
        android:padding="@dimen/spacing_medium"
        android:text="@string/button_share" />

    <TextView
        android:id="@+id/receiveTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/spacing_medium"
        android:drawablePadding="@dimen/spacing_medium"
        android:padding="@dimen/spacing_medium"
        android:text="@string/button_load" />

    <TextView
        android:id="@+id/saveTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/spacing_medium"
        android:drawablePadding="@dimen/spacing_medium"
        android:padding="@dimen/spacing_medium"
        android:text="@string/button_save_file" />
</LinearLayout>