<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/spacing_micro">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_dialog_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/viewLine"
        android:layout_alignParentTop="true"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

    <LinearLayout
        android:id="@+id/linLay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="end"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/spacing_medium"
            android:text="@string/dialog_button_copy"
            android:textSize="14sp" />

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/spacing_medium"
            android:text="@string/close"
            android:textSize="14sp" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/relLay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/relLayWeeks"
        android:layout_marginEnd="@dimen/spacing_normal"
        android:layout_marginBottom="@dimen/spacing_micro">

        <ImageView
            android:id="@+id/imageAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="@dimen/spacing_normal"
            android:layout_marginTop="2dp"
            android:maxLines="1"
            android:singleLine="true"
            android:textSize="16sp"
            tools:text="8:00-10:00" />

        <TextView
            android:id="@+id/timeLesson"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="2dp"
            android:layout_toStartOf="@id/imageAdd"
            android:maxLines="1"
            android:padding="@dimen/spacing_micro"
            android:singleLine="true"
            android:textSize="16sp"
            tools:text="8:00-10:00" />


        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/day"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="@dimen/spacing_normal"
            android:layout_toStartOf="@id/timeLesson"
            android:background="@android:color/transparent"
            android:textSize="16sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relLayWeeks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/linLay"
        android:layout_marginStart="@dimen/spacing_normal"
        android:layout_marginTop="@dimen/spacing_micro"
        android:layout_marginEnd="@dimen/spacing_normal"
        android:layout_marginBottom="@dimen/spacing_medium"
        android:padding="@dimen/spacing_micro">

        <TextView
            android:id="@+id/titleWeeks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:text="@string/selected_weeks"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/weeks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="@dimen/spacing_normal"
            android:layout_toEndOf="@+id/titleWeeks"
            android:text="@string/select_all"
            android:textSize="16sp" />
    </RelativeLayout>

    <View
        android:id="@+id/viewLine"
        style="?attr/lineColorStyle"
        android:layout_width="wrap_content"
        android:layout_height="0.5dp"
        android:layout_above="@+id/relLay"
        android:layout_marginTop="@dimen/spacing_medium"
        android:layout_marginBottom="@dimen/spacing_medium" />

</RelativeLayout>