<?xml version="1.0" encoding="utf-8"?>
<LinearLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/spacing_middle">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_micro">

        <ImageView
            android:id="@+id/imageSubject"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_margin="@dimen/spacing_middle"
            android:src="@drawable/ic_subject_black" />

        <EditText
            android:id="@+id/textSubject"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_micro"
            android:layout_marginEnd="@dimen/spacing_micro"
            android:layout_toStartOf="@+id/imageSelectSubject"
            android:layout_toEndOf="@+id/imageSubject"
            android:hint="@string/subject"
            android:textSize="@dimen/text_size_large"
            tools:text="@string/subject" />

        <ImageView
            android:id="@+id/imageSelectSubject"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_margin="@dimen/spacing_middle"
            tools:src="@drawable/ic_down_arrow_black" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_micro">

        <ImageView
            android:id="@+id/imageEducator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_margin="@dimen/spacing_middle"
            android:src="@drawable/ic_educator_black" />

        <EditText
            android:id="@+id/textEducator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_micro"
            android:layout_marginEnd="@dimen/spacing_micro"
            android:layout_toStartOf="@+id/imageSelectEducator"
            android:layout_toEndOf="@+id/imageEducator"
            android:hint="@string/educator"
            android:textSize="@dimen/text_size_large"
            tools:text="@string/educator" />

        <ImageView
            android:id="@+id/imageSelectEducator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_margin="@dimen/spacing_middle"
            tools:src="@drawable/ic_down_arrow_black" />

    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_micro">

        <ImageView
            android:id="@+id/imageAudience"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_margin="@dimen/spacing_middle"
            android:src="@drawable/ic_audience_black" />

        <EditText
            android:id="@+id/textAudience"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_micro"
            android:layout_marginEnd="@dimen/spacing_micro"
            android:layout_toStartOf="@+id/imageSelectAudience"
            android:layout_toEndOf="@+id/imageAudience"
            android:hint="@string/audience"
            android:textSize="@dimen/text_size_large"
            tools:text="@string/audience" />

        <ImageView
            android:id="@+id/imageSelectAudience"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_margin="@dimen/spacing_middle"
            tools:src="@drawable/ic_down_arrow_black" />

    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_micro">

        <ImageView
            android:id="@+id/imageTypelesson"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_margin="@dimen/spacing_middle"
            android:src="@drawable/ic_typelesson_black" />

        <EditText
            android:id="@+id/textTypelesson"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_micro"
            android:layout_marginEnd="@dimen/spacing_micro"
            android:layout_toStartOf="@+id/imageSelectTypelesson"
            android:layout_toEndOf="@+id/imageTypelesson"
            android:hint="@string/typelesson"
            android:textSize="@dimen/text_size_large"
            tools:text="@string/typelesson" />

        <ImageView
            android:id="@+id/imageSelectTypelesson"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_margin="@dimen/spacing_middle"
            tools:src="@drawable/ic_down_arrow_black" />

    </RelativeLayout>

    <Button
        android:id="@+id/btnNext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_medium"
        android:layout_marginTop="@dimen/spacing_normal"
        android:layout_marginEnd="@dimen/spacing_medium"
        android:gravity="end"
        android:paddingTop="@dimen/spacing_normal"
        android:text="@string/next"
        android:textAlignment="center"
        android:textSize="14sp" />

</LinearLayout>